# multi_sensor_calibration

./: .gitignore  LGIT_README.md  readme_docker.md
accumulator/: CMakeLists.txt
accumulator/include/accumulator/: accumulator.hpp
accumulator/test/: test_pattern_size_filter.cpp
docker/ros1/: Dockerfile  build_docker.sh  run_docker.sh
docs/: lgit_calibration_workflow.md
lgit_calibration_preprocessing/: CMakeLists.txt  package.xml  setup.py
lgit_calibration_preprocessing/scripts/: analyze_lidar_order.py  camera_info_publisher_node.py  convert_lgit_ros2_to_ros1_bag.py  hesai_to_velodyne_node.py  radar_pc2_to_pattern_node.py
lgit_calibration_preprocessing/src/lgit_calibration_preprocessing/: __init__.py  camera_info.py  lidar_ring.py  radar_target.py
lgit_calibration_preprocessing/test/: test_preprocessing_utils.py
lidar_detector/config/: config.yaml  config_lgit_at128.yaml
mono_detector/: CMakeLists.txt  package.xml
mono_detector/config/: image_processing_lgit_6_10m.yaml
mono_detector/include/mono_detector/: detector.hpp  node_lib.hpp
mono_detector/src/lib/: detector.cpp  node_lib.cpp
mono_detector/srv/: SetRoi.srv
mono_detector/test/: detector.cpp
multi_sensor_calibration_launch/: package.xml
multi_sensor_calibration_launch/launch/: lgit_three_sensor_calibration.launch
optimization/src/: server.py
