<?xml version="1.0"?>
<package>
  <name>multi_sensor_calibration_launch</name>
  <version>0.0.0</version>
  <description>The multi_sensor_calibration_launch package</description>

  <maintainer email="j.f.m.domhof@tudelft.nl">jfmdomhof</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>accumulator</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>lgit_calibration_preprocessing</run_depend>
  <run_depend>lidar_detector</run_depend>
  <run_depend>mono_detector</run_depend>
  <run_depend>optimization</run_depend>

  <export>
  </export>
</package>
